chat: fix text contrast for nicknames in groups

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1535,6 +1535,9 @@ ac5 = var(--ac-5)
 
         /// Fix unread messages in dark mode. @upstream
         /.dark ._8Uqu5 ._3dtfX .m61XR { c: var(--secondary-stronger) }
+
+        /// Groups -> Fix opacity for nicknames.
+        /[class *= ' color-'] > span:nth-child(2) { c: fg3 }
     }
 
     /// Feat -> Colors for replies and group members.
